--- a/packages/client/src/index.html
+++ b/packages/client/src/index.html
@@ -6,6 +6,13 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <main>
+    <p id="status">Status: <span>checking auth...</span></p>
+    <button id="btn_login">Login</button>
+    <button id="btn_logout">Logout</button>
+    <button id="btn_refresh">Refresh</button>
+    <button id="btn_protected">Protected API</button>
+    <code></code>
+  </main>
 </body>
 </html>
